<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginAdmin">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="268dp"
            android:layout_height="277dp"
            app:srcCompat="@drawable/administrador"
            android:background="@color/white"/>

        <EditText
            android:id="@+id/UsuaioIngresado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/Usuario"
            android:minHeight="48dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

        <EditText
            android:id="@+id/ContraIngresado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/Contraseña"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingBottom="10dp" />

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="ingresar"
            android:text="@string/btnIngresar" />



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>