<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminAlumnos">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="274dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <EditText
                android:id="@+id/txt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="invisible"
                android:layout_marginTop="10dp"
                android:hint="Matricula"/>

            <EditText
                android:id="@+id/txt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="invisible"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/txt3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="invisible"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/txt4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="invisible"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/txt5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="invisible"
                android:layout_marginTop="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnGuardar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="guardar"
                    android:text="@string/btnGuardar"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/btnCanacelar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="limpiar"
                    android:text="@string/btnCancelar"
                    android:visibility="invisible" />
            </LinearLayout>

            <ScrollView
                android:id="@+id/txtDesplegado"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                tools:ignore="SpeakableTextPresentCheck">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtDeplegar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="invisible" />

                </LinearLayout>
            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">


            <Button
                android:id="@+id/btnInsertar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:onClick="MostrarInvisibles"
                android:text="@string/btnInsertar" />

            <Button
                android:id="@+id/btnActualizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/btnActualizar"
                android:layout_marginTop="10dp" />

            <Button
                android:id="@+id/btnConsultar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:onClick="MostrarAlumnos"
                android:text="@string/btnConsultar" />

            <Button
                android:id="@+id/btnEliminar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/btnEliminar"
                android:layout_marginTop="10dp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>